# docs-agent

./: agent.yaml  azure.yaml  blog-post-agent.yaml  main.py  pyproject.toml  talk-to-agent.ipynb
.github/agents/: microsoft-agent-framework-python.agent.md
agents/: docs.py  summarize.py
src/agent_with_hosted_mcp/: Dockerfile
src/agents-in-workflow/: Dockerfile  agent.yaml  main.py  requirements.txt
src/agents-in-workflow/models/: responses.py
src/agents-in-workflow/workflows/: documentation.py
src/docs-agent/: README.MD  local-test.http  main.py
src/docs-agent/agents/: rewrite.py
workflows/: documentation.py
